fixed restaurants name overlaping with heart icon

--- a/scss/pages/_restaurants.scss
+++ b/scss/pages/_restaurants.scss
@@ -19,6 +19,7 @@
    h1 {
        font-family: 'shrikhand', sans-serif;
        padding: 0;
+       max-width: 80%;
     }
     .heart{
         position: absolute;
